force-app/main/default/objects/Field_Audit_Event__e/Field_Audit_Event__e.object-meta.xml
<CustomObject>
    <label>Field Audit Event</label>
    <pluralLabel>Field Audit Events</pluralLabel>
</CustomObject>