force-app/main/default/objects/Field_Audit_Event__e/fields/ChangedById__c.field-meta.xml
<CustomField>
    <fullName>ChangedById__c</fullName>
    <label>ChangedById</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>