force-app/main/default/objects/Field_Audit_Event__e/fields/ChangeSource__c.field-meta.xml
<CustomField>
    <fullName>ChangeSource__c</fullName>
    <label>ChangeSource</label>
    <length>80</length>
    <type>Text</type>
</CustomField>