force-app/main/default/objects/Field_Audit_Event__e/fields/FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>FieldApiName__c</fullName>
    <label>FieldApiName</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>