force-app/main/default/objects/Field_Audit_Event__e/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <label>ObjectApiName</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>