force-app/main/default/objects/Field_Audit_Event__e/fields/OldValue__c.field-meta.xml
<CustomField>
    <fullName>OldValue__c</fullName>
    <label>OldValue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>